# MSCA

./: .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MEMORY.md  README.en.md  README.md  main.py  package-lock.json  package.json
backend/: __main__.py  pyproject.toml  selfIdentity.plist
backend/app/: main.py
backend/app/api/: devices.py  install.py  logs.py  mirror.py
backend/app/core/: alias_manager.py  device_manager.py  log_buffer.py
backend/app/drivers/: android.py  base.py  ios.py
backend/app/drivers/adapters/: base.py  goios_adapter.py  privilege.py  tidevice_adapter.py
backend/app/models/: device.py
backend/app/scrcpy/: protocol.py  server_manager.py
backend/app/websocket/: control.py  devices.py  handler.py  video.py
backend/config/: device_aliases.json  wda_config.json
backend/tests/: test_alias_manager.py  test_android_driver_lifecycle.py  test_backend_entry.py  test_control_encoding.py  test_control_task_cleanup.py  test_device_manager_lifecycle.py  test_devices_api.py  test_goios_agent_cleanup.py  test_goios_runwda.py  test_h264_sps.py  test_ios_control.py  test_ios_driver_lifecycle.py  test_ios_image_size.py  test_ios_mjpeg_url.py  test_ios_ports.py  test_log_buffer.py  test_mirror_lifecycle.py  test_scrcpy_device_messages.py  test_wda_diagnostics.py
config/: dev-server.json
doc/: AAB安装方案.md  Windows端回归验证清单.md  下一步计划.md  人工记录-AI勿用-勿读.md  会话纪要-2026-06-12.md  修复日志.md  开发计划.md  操作手册.md  第三方项目调研分析报告.md  设备部署指南.md  需求拆解.md  项目核心技术点.md  项目需求及技术栈概览.md
electron/: .eslintrc.cjs  backend-manager-state.js  backend-manager.js  (+4 more)
(+52 files in other folders)
